--- a/Lab/Lab 5/Amazon_webscrapper.ipynb
+++ b/Lab/Lab 5/Amazon_webscrapper.ipynb
@@ -52,7 +52,7 @@
     "    -------\n",
     "    New .xlsx file with previous search history and results from current search\n",
     "    \"\"\"\n",
-    "    prod_tracker = pd.read_csv('C:/Users/yashk/Desktop/ADM/Pycharm/amazon_webscraper-master/trackers/TRACKER_PRODUCTS.csv', sep=';')\n",
+    "    prod_tracker = pd.read_csv('amazon_webscraper-master/trackers/TRACKER_PRODUCTS.csv', sep=';')\n",
     "    prod_tracker_URLS = prod_tracker.url\n",
     "    tracker_log = pd.DataFrame()\n",
     "    now = datetime.now().strftime('%Y-%m-%d %Hh%Mm')\n",
@@ -145,13 +145,13 @@
     "        print('end of interval ' + str(interval))\n",
     "\n",
     "    # after the run, checks last search history record, and appends this run results to it, saving a new file\n",
-    "    last_search = glob('C:/Users/yashk/Desktop/ADM/Pycharm/amazon_webscraper-master/search_history/*.xlsx')[\n",
+    "    last_search = glob('amazon_webscraper-master/search_history/*.xlsx')[\n",
     "        -1]  # path to file in the folder\n",
     "\n",
     "    search_hist = pd.read_excel(last_search)\n",
     "    final_df = search_hist.append(tracker_log, sort=False)\n",
     "\n",
-    "    final_df.to_excel('C:/Users/yashk/Desktop/ADM/Pycharm/amazon_webscraper-master/search_history/SEARCH_HISTORY_{}.xlsx'.format(now), index=False)\n",
+    "    final_df.to_excel('amazon_webscraper-master/search_history/SEARCH_HISTORY_{}.xlsx'.format(now), index=False)\n",
     "    print('end of search')\n",
     "\n",
     "\n",
